--- a/miembros.html
+++ b/miembros.html
@@ -25,32 +25,42 @@
 </head>
 <body class="bodymiembros">
     <header>
-        <nav>
-            <div class="logo">
-                <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
-                <div class="logo__title wow animate__animated animate__pulse">
-                    Akatsuki
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo">
+            <a class="navbar-brand wow animate__animated animate__pulse" href="#">AKATSUKI</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="miembros.html">Miembros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="historia.html">Historia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="galeria.html">Galeria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-button" href="unirse.html">Unirse</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="navlinks">
-                <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
-                <li class="navlinks__list"><a class="navlinks__text active" href="miembros.html">Miembros</a></li>
-                <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
-                <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
-                <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
-            </ul>
         </nav>
     </header>
     <main>
         <section class="bannerMiembros"></section>
-
     </main>
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
                 <li class="footercontent__list"><a class="footercontent__icons" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
                 <li class="footercontent__list"><a class="footercontent__icons" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra-784b841a5/"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra/"><i class="fab fa-linkedin-in"></i></a></li>
                 <li class="footercontent__list"><a class="footercontent__icons" href="https://github.com/thomasginestra"><i class="fab fa-github"></i></a></li>
             </ul>
         </div>
