navbar and banner changes

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 </head>
 <body class="bodyinicio">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark ">
             <img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo">
-            <a class="navbar-brand wow animate__animated animate__pulse" href="#">AKATSUKI</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand wow animate__animated animate__pulse" href="">AKATSUKI</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto text-center">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                     </li>
@@ -60,13 +60,13 @@
             </div>
             <div class="containerinicio__text">
                 <h3 class="containerinicio__title  wow animate__animated animate__fadeIn animate__slower 	3s">Himno Akatsuki</h3>
-                <p class="containerinicio__p wow animate__animated animate__fadeIn animate__slower 	3s">Himno que los representa, los hace temibles y poderosos. Habla de lo independiente que pueden ser, de lo que son capaz  de hacer por su objetivo y que sin duda lo conseguiran</p>
+                <p class="containerinicio__p wow animate__animated animate__fadeIn animate__slower 	3s">Himno que los representa, los hace temibles y poderosos. Habla de lo independiente que pueden ser, de lo que son capaz  de hacer por su objetivo y que sin duda lo conseguiran.</p>
             </div>
         </div>
         <div class="containerpelea">
             <div class="containerpelea__text">
                 <h3 class="containerpelea__title  wow animate__animated animate__fadeIn animate__slower 	3s">Asalto de Pain</h3>
-                <p class="containerpelea__p wow animate__animated animate__fadeIn animate__slower 	3s">Luego de capturar a la mayoria de los bijus era hora de ir por Naruto (contenedor del nueve colas, el Kyubi). Todo comenzo con una invasion a la aldea donde se creo un enorme caos, se invoco a los seis caminos del dolor (los seis pain) y como no se esperaban multiples puntos de ataques les fue dificil reaccionar. Todo termino en un enfrentamiento espectacular entre Pain y Naruto en plena aldea devastada</p>
+                <p class="containerpelea__p wow animate__animated animate__fadeIn animate__slower 	3s">Luego de capturar a la mayoria de los bijus era hora de ir por Naruto (contenedor del nueve colas, el Kyubi). Todo comenzo con una invasion a la aldea donde se creo un enorme caos, se invoco a los seis caminos del dolor (los seis pain) y como no se esperaban multiples puntos de ataques les fue dificil reaccionar. Todo termino en un enfrentamiento espectacular entre Pain y Naruto en plena aldea devastada.</p>
             </div>
             <div class="containerpelea__boximg wow animate__animated animate__backInRight animate__faster	500ms">
                 <img class="containerpelea__img" src="media/inicio/narutovsPain.jpg" alt="narutovsPain">
@@ -96,10 +96,10 @@
         </div>
     </footer>
     <!--SCRIPTS-->
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="js/wow.min.js"></script>
     <script script>new WOW().init();</script>
     <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
