--- a/unirse.html
+++ b/unirse.html
@@ -25,15 +25,15 @@
 </head>
 <body class="bodyunirse">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark ">
             <img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo">
-            <a class="navbar-brand wow animate__animated animate__pulse" href="#">AKATSUKI</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand wow animate__animated animate__pulse" href="">AKATSUKI</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
+                <ul class="navbar-nav ms-auto text-center">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
@@ -45,7 +45,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link nav-button" href="unirse.html">Unirse</a>
                     </li>
                 </ul>
