changes and fixed

--- a/galeria.html
+++ b/galeria.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-button" href="unirse.html">Unirse</a>
+                        <a class="nav-link nav-button m-auto" href="unirse.html">Unirse</a>
                     </li>
                 </ul>
             </div>
