--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 <body class="bodyinicio">
     <header>
+        <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo">
             <a class="navbar-brand wow animate__animated animate__pulse" href="">AKATSUKI</a>
@@ -46,14 +47,20 @@
                         <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-button" href="unirse.html">Unirse</a>
+                        <a class="nav-link nav-button m-auto" href="unirse.html">Unirse</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
-        <section class="bannerInicio"></section>
+        <!--BANNER-->
+        <section class="bannerinicio">
+            <div class="bannerinicio__container">
+                <h1 class="bannerinicio__title wow animate__animated animate__lightSpeedInRight">INICIO</h1>
+            </div>
+        </section>
+        <!--ARTICULO1-->
         <div class="containerinicio">
             <div class="containerinicio__video wow animate__animated animate__backInLeft animate__faster	500ms">
                 <video class="containerinicio__video-w" controls autoplay loop muted src="../Proyecto Akatsuki/media/inicio/theme.mp4" ></video>
@@ -63,6 +70,7 @@
                 <p class="containerinicio__p wow animate__animated animate__fadeIn animate__slower 	3s">Himno que los representa, los hace temibles y poderosos. Habla de lo independiente que pueden ser, de lo que son capaz  de hacer por su objetivo y que sin duda lo conseguiran.</p>
             </div>
         </div>
+        <!--ARTICULO2-->
         <div class="containerpelea">
             <div class="containerpelea__text">
                 <h3 class="containerpelea__title  wow animate__animated animate__fadeIn animate__slower 	3s">Asalto de Pain</h3>
@@ -72,6 +80,7 @@
                 <img class="containerpelea__img" src="media/inicio/narutovsPain.jpg" alt="narutovsPain">
             </div>
         </div>
+        <!--ARTICULO3-->
         <div class="containerestatua">
             <div class="containerestatua__boximg wow animate__animated animate__backInLeft animate__faster	500ms">
                 <img class="containerestatua__img" src="media/inicio/estatua.jpg" alt="narutovsPain">
@@ -82,6 +91,7 @@
             </div>
         </div>
     </main>
+        <!--FOOTER-->
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
