--- a/historia.html
+++ b/historia.html
@@ -25,6 +25,7 @@
 </head>
 <body class="bodyhistoria">
     <header>
+        <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo">
             <a class="navbar-brand wow animate__animated animate__pulse" href="">AKATSUKI</a>
@@ -46,54 +47,57 @@
                         <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-button" href="unirse.html">Unirse</a>
+                        <a class="nav-link nav-button m-auto" href="unirse.html">Unirse</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
+        <!--BANNER-->
         <section class="bannerHistoria"></section>
-        <div id="historia">
-            <div class="historia__block1 wow animate__animated animate__flipInY">
-                <h4 class="historia__block--title">Historia de la Organizacion</h4>
-                    <p class="historia__block--text1">Fundada por Yahiko, esta organización fue temida en todo el mundo por el alcance de su influencia en el mundo ninja. La mayoría de sus integrantes se encontraban en las páginas del Libro Bingo por lo cual se tenía la orden de matarlos.</p>
+        <div class="historia__container">
+            <!--CARD 1-->
+            <div class="historia__block wow animate__animated animate__zoomIn">
+                <h4 class="historia__block--title">Historia de la organización</h4>
+                <img class="historia__block_img" src="media/historia/inicios1.png" alt="">
+                    <p class="historia__block--text">Fundada por Yahiko, esta organización fue temida en todo el mundo por el alcance de su influencia en el mundo ninja. La mayoría de sus integrantes se encontraban en las páginas del Libro Bingo por lo cual se tenía la orden de matarlos.</p>
             </div>
-            <div class="historia__block2 wow animate__animated animate__flipInY">
+            <!--CARD 2-->
+            <div class="historia__block wow animate__animated animate__zoomIn">
                 <h4 class="historia__block--title">Objetivos</h4>
-                    <p class="historia__block--text2">El objetivo principal de la organizacion fue el de capturar a los Jinchūriki para extraerles sus Bestias con Cola, sellarlas en la Estatua Demoníaca del Camino Exterior y de esa manera despertar al Diez Colas, la criatura más poderosa del planeta.</p>
+                <img class="historia__block_img" src="media/historia/inicios2.png" alt="">
+                    <p class="historia__block--text">El objetivo principal de la organizacion fue el de capturar a los Jinchūriki para extraerles sus Bestias con Cola, sellarlas en la Estatua Demoníaca del Camino Exterior y de esa manera despertar al Diez Colas, la criatura más poderosa del planeta.</p>
             </div>
-            <div class="historia__block3 wow animate__animated animate__flipInY">
+            <!--CARD 3-->
+            <div class="historia__block wow animate__animated animate__zoomIn">
                 <h4 class="historia__block--title">Inicios</h4>
-                    <p class="historia__block--text3">Durante sus comienzos, Akatsuki fue formada por Yahiko, junto a sus compañeros Nagato y Konan, quienes buscaban encontrar la paz sin llegar a utilizar la violencia y llegando a acuerdos pacíficos con los invasores.</p>
+                <img class="historia__block_img" src="media/historia/inicios3.png" alt="">
+                    <p class="historia__block--text">Durante sus comienzos, Akatsuki fue formada por Yahiko, junto a sus compañeros Nagato y Konan, quienes buscaban encontrar la paz sin llegar a utilizar la violencia y llegando a acuerdos pacíficos con los invasores.</p>
             </div>
         </div>
-        <div id="carrousel">
-            <div class="col-10 m-auto">
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="media/historia/inicios1.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="media/historia/inicios2.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="media/historia/inicios3.png" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+        <div class="historia__container">
+            <!--CARD 4-->
+            <div class="historia__block wow animate__animated animate__zoomIn">
+                <h4 class="historia__block--title">Organización aliada</h4>
+                <img class="historia__block_img" src="media/historia/taka.png" alt="">
+                    <p class="historia__block--text">Taka se ha aliado con Akatsuki. Ellos usan las capas de Akatsuki, pero parecen tener sus collares altos doblados hacia abajo. Ninguno de sus integrantes usa un protector, esmalte de uñas, sombreros de paja cónicos ni los anillos representativos de la organización, ya que estos no pueden ser reemplazados y se deben recuperar los perdidos.</p>
+            </div>
+            <!--CARD 5-->
+            <div class="historia__block wow animate__animated animate__zoomIn">
+                <h4 class="historia__block--title">Plan ojo de luna</h4>
+                <img class="historia__block_img" src="media/historia/luna.png" alt="">
+                    <p class="historia__block--text">El Plan Ojo de Luna (Tsuki no Me Keikaku) es el plan maestro de Madara Uchiha el cual consiste en crear un mundo ideal y que posteriormente fue adoptado por Obito Uchiha. Obito mencionó que ha sido demasiado cauteloso por mucho tiempo, y que es hora de salir de las sombras y comenzar su plan.</p>
+            </div>
+            <!--CARD 6-->
+            <div class="historia__block wow animate__animated animate__zoomIn">
+                <h4 class="historia__block--title">Ex miembro</h4>
+                <img class="historia__block_img" src="media/historia/exmiembro.jpg" alt="">
+                    <p class="historia__block--text">Uno de los legendarios Sannin de Konoha. Sin embargo, los experimentos poco éticos que comenzó a hacer para lograr su anhelada inmortalidad hicieron que fuera perseguido.Poco después de dejar la aldea, se unió a Akatsuki. Aunque todavía era el compañero de Sasori, su objetivo era obtener el Sharingan robando el cuerpo de Itachi Uchiha. Después de que su plan falló, dejó el equipo.</p>
             </div>
         </div>
     </main>
+    <!--FOOTER-->
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
