--- a/miembros.html
+++ b/miembros.html
@@ -25,6 +25,7 @@
 </head>
 <body class="bodymiembros">
     <header>
+        <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo">
             <a class="navbar-brand wow animate__animated animate__pulse" href="">AKATSUKI</a>
@@ -46,15 +47,17 @@
                         <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-button" href="unirse.html">Unirse</a>
+                        <a class="nav-link nav-button m-auto" href="unirse.html">Unirse</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
+        <!--BANNER-->
         <section class="bannerMiembros"></section>
     </main>
+    <!--FOOTER-->
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
