add alertModal and small changes

--- a/galeria.html
+++ b/galeria.html
@@ -93,8 +93,9 @@
         </div>
     </footer>
     <!--SCRIPTS-->
-    <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
     <script script>new WOW().init();</script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
