--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </div>
     </footer>
     <!--SCRIPTS-->
+    <script src="js/main.js"></script>
     <script src="js/wow.min.js"></script>
     <script script>new WOW().init();</script>
     <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
