--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!--ARTICULO1-->
         <div class="containerinicio">
             <div class="containerinicio__video wow animate__animated animate__backInLeft animate__faster	500ms">
-                <video class="containerinicio__video-w" controls autoplay loop muted src="../Proyecto Akatsuki/media/inicio/theme.mp4" ></video>
+                <video class="containerinicio__video-w" controls autoplay loop muted src="media/inicio/theme.mp4" ></video>
             </div>
             <div class="containerinicio__text">
                 <h3 class="containerinicio__title  wow animate__animated animate__fadeIn animate__slower 	3s">Himno Akatsuki</h3>
