--- a/unirse.html
+++ b/unirse.html
@@ -45,7 +45,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link nav-button m-auto" href="unirse.html">Unirse</a>
                     </li>
                 </ul>
@@ -56,33 +56,33 @@
         <section class="bannerUnirse"></section>
         <div class="backgroundunirse">
             <!--FORMULARIO -->
-            <div class="form__container">
+            <div class="form__container wow animate__animated animate__pulse">
                 <div class="form__title">Registrate</div>
                 <form action="unirse.html" method="POST" enctype="multipant/form/data">
                     <div class="form__user-details">
                         <div class="form__input-box">
                             <span class="form__details">Nombre:</span>
-                            <input class="form__input" type="text" name="nombre" placeholder="ingresa tu nombre" required>
+                            <input class="form__input" type="text" name="nombre" placeholder="Ingresa tu nombre" required>
                         </div>
                         <div class="form__input-box">
                             <span class="form__details">Edad:</span>
-                            <input class="form__input" type="text" name="nombre" placeholder="ingresa tu edad" required>
+                            <input class="form__input" type="text" name="nombre" placeholder="Ingresa tu edad" required>
                         </div>
                         <div class="form__input-box">
                             <span class="form__details">Peso:</span>
-                            <input class="form__input" type="text" name="nombre" placeholder="ingresa tu peso" required>
+                            <input class="form__input" type="text" name="nombre" placeholder="Ingresa tu peso" required>
                         </div>
                         <div class="form__input-box">
                             <span class="form__details">Aldea:</span>
-                            <input class="form__input" type="text" name="nombre" placeholder="ingresa tu aldea" required>
+                            <input class="form__input" type="text" name="nombre" placeholder="Ingresa tu aldea" required>
                         </div>
                         <div class="form__input-box">
                             <span class="form__details">Clan:</span>
-                            <input class="form__input" type="text" name="nombre" placeholder="ingresa tu clan" required>
+                            <input class="form__input" type="text" name="nombre" placeholder="Ingresa tu clan" required>
                         </div>
                         <div class="form__input-box">
                             <span class="form__details">Email:</span>
-                            <input class="form__input" type="text" name="nombre" placeholder="ingresa tu email" required>
+                            <input class="form__input" type="text" name="nombre" placeholder="Ingresa tu email" required>
                         </div>
                     </div>
                     <div class="form__block">
