--- a/miembros.html
+++ b/miembros.html
@@ -56,6 +56,42 @@
     <main>
         <!--BANNER-->
         <section class="bannerMiembros"></section>
+        <div class="containermiembros">
+            <div class="miembros__container">
+                <div class="miembros__display">
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/deidara.png" alt="deidara">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/hidan.png" alt="hidan">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/itachi.png" alt="itachi">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/kakuzu.png" alt="kakuzu">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/kisame.png" alt="kisame">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/konan.png" alt="konan">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img tobi__img" src="media/miembros/tobi.png" alt="tobi">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/pain.png" alt="pain">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/sasori.png" alt="sasori">
+                    </div>
+                    <div class="miembros__card">
+                        <img class="miembros__img" src="media/miembros/zetsu.png" alt="zetsu">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!--FOOTER-->
     <footer>
