--- a/unirse.html
+++ b/unirse.html
@@ -25,6 +25,7 @@
 </head>
 <body class="bodyunirse">
     <header>
+        <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo">
             <a class="navbar-brand wow animate__animated animate__pulse" href="">AKATSUKI</a>
@@ -133,6 +134,7 @@
             </div>
         </div>
     </main>
+    <!--FOOTER-->
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
