--- a/galeria.html
+++ b/galeria.html
@@ -56,27 +56,68 @@
     <main>
         <section class="bannerGaleria"></section>
         <div class="backgroundGaleria">
+                <!--GALERIA DE FOTOS-->
                 <ul class="containergaleria">
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu2.png" alt="zetsu2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kisame1.png" alt="kisame1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu3.png" alt="zetsu3"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori2.png" alt="sasori2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi2.png" alt="itachi2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru1.png" alt="horochimaru1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi1.png" alt="tobi1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi2.png" alt="tobi2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kakuzu2.png" alt="kakuzu2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru2.png" alt="horochimaru2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan2.png" alt="konan2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain1.png" alt="pain1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara2.png" alt="deidara2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain2.png" alt="pain2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori1.png" alt="sasori1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan1.png" alt="konan1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu1.png" alt="zetsu1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara1.png" alt="deidara1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain3.png" alt="pain3"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi1.png" alt="itachi1"></li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu2.png" alt="zetsu2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kisame1.png" alt="kisame1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu3.png" alt="zetsu3">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori2.png" alt="sasori2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi2.png" alt="itachi2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru1.png" alt="horochimaru1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi1.png" alt="tobi1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi2.png" alt="tobi2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kakuzu2.png" alt="kakuzu2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru2.png" alt="horochimaru2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan2.png" alt="konan2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain1.png" alt="pain1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara2.png" alt="deidara2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain2.png" alt="pain2">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori1.png" alt="sasori1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan1.png" alt="konan1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu1.png" alt="zetsu1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara1.png" alt="deidara1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain3.png" alt="pain3">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi1.png" alt="itachi1">
+                    </li>
                 </ul>
         </div>
     </main>
